# turtlebot3_manipulation

./: .travis.yml  CONTRIBUTING.md  README.md
open_manipulator_with_tb3_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_with_tb3_tools/config/: costmap_common_params.yaml  costmap_common_params_waffle_pi.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
open_manipulator_with_tb3_tools/launch/: amcl.launch  manipulation.launch  moveit_rviz.launch  navigation.launch  om_with_tb3_remote.launch  open_manipulator_with_tb3_manipulation.launch  open_manipulator_with_tb3_navigation.launch  open_manipulator_with_tb3_robot.launch  open_manipulator_with_tb3_slam.launch  pick_and_place.launch  robot.launch  rooms.launch  slam.launch  task_controller.launch
open_manipulator_with_tb3_tools/nodes/: controller_for_pick_and_place  pick_and_place_state_machine
open_manipulator_with_tb3_tools/rviz/: open_manipulator_with_tb3_manipulation.rviz  open_manipulator_with_tb3_navigation.rviz  open_manipulator_with_tb3_slam.rviz
open_manipulator_with_tb3_tools/src/: gazebo_bridge.cpp  gripper_server.cpp  moveit_bridge.cpp  pick.cpp  place.cpp
open_manipulator_with_tb3_waffle_moveit/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_with_tb3_waffle_moveit/config/: om_with_tb3.srdf  open_manipulator_with_tb3.srdf  ros_controllers.yaml
open_manipulator_with_tb3_waffle_moveit/launch/: chomp_planning_pipeline.launch.xml  demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
turtlebot3_lime_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_lime_description/gazebo/: open_manipulator_sara.gazebo.xacro  turtlebot3_bigwheel_orin.gazebo.xacro
turtlebot3_lime_description/launch/: model.launch.py
turtlebot3_lime_description/ros2_control/: turtlebot3_lime_system.ros2_control.xacro
turtlebot3_lime_description/rviz/: model.rviz
turtlebot3_lime_description/urdf/: open_manipulator_sara.urdf.xacro  turtlebot3_bigwheel_orin.urdf.xacro  turtlebot3_lime.urdf.xacro
turtlebot3_lime_hardware/: CHANGELOG.rst  CMakeLists.txt  package.xml  turtlebot3_lime_hardware.xml
turtlebot3_lime_hardware/src/: dynamixel_sdk_wrapper.cpp  opencr.cpp  turtlebot3_lime_system.cpp
turtlebot3_lime_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_lime_teleop/src/: turtlebot3_lime_teleop.cpp
turtlebot3_manipulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_manipulation_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_manipulation_bringup/config/: controller_manager.yaml  diff_drive_controller.yaml  gazebo_controller_manager.yaml  hardware_controller_manager.yaml
turtlebot3_manipulation_bringup/env-hooks/: turtlebot3_manipulation_bringup.dsv.in
turtlebot3_manipulation_bringup/launch/: base.launch.py  fake.launch.py  fake_turtlebot3_manipulation.launch.py  gazebo.launch.py  hardware.launch.py  turtlebot3_manipulation_bringup.launch
turtlebot3_manipulation_bringup/rviz/: turtlebot3_manipulation.rviz
turtlebot3_manipulation_bringup/src/: turtlebot3_manipulation_bringup.cpp
turtlebot3_manipulation_bringup/worlds/: empty_world.model
turtlebot3_manipulation_cartographer/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_manipulation_cartographer/config/: turtlebot3_2d.lua
turtlebot3_manipulation_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
turtlebot3_manipulation_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_manipulation_description/gazebo/: open_manipulator_x.gazebo.xacro  turtlebot3_waffle_pi.gazebo.xacro
turtlebot3_manipulation_description/launch/: model.launch.py  tb3_manipulation_upload.launch  tb3_manipulation_view.launch  tb3_omx_upload.launch  tb3_omx_view.launch  turtlebot3_manipulation_rviz.launch.py  turtlebot3_manipulation_upload.launch  turtlebot3_manipulation_view.launch
turtlebot3_manipulation_description/ros2_control/: turtlebot3_manipulation_system.ros2_control.xacro  turtlebot3_waffle_pi_system.ros2_control.xacro
turtlebot3_manipulation_description/rviz/: turtlebot3_manipulation.rviz
turtlebot3_manipulation_description/urdf/: open_manipulator_x.gazebo.xacro  open_manipulator_x.transmission.xacro  open_manipulator_x.urdf.xacro  tb3_manipulation_robot.urdf.xacro  tb3_omx.urdf.xacro  turtlebot3_manipulation.urdf  turtlebot3_manipulation.urdf.xacro  turtlebot3_manipulation_robot.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
turtlebot3_manipulation_gui/: CMakeLists.txt  package.xml
turtlebot3_manipulation_gui/launch/: turtlebot3_manipulation_gui.launch
turtlebot3_manipulation_gui/src/: main.cpp  main_window.cpp  qnode.cpp
turtlebot3_manipulation_gui/ui/: main_window.ui
turtlebot3_manipulation_hardware/: CHANGELOG.rst  CMakeLists.txt  package.xml  turtlebot3_manipulation_hardware.xml
turtlebot3_manipulation_hardware/src/: dynamixel_sdk_wrapper.cpp  opencr.cpp  turtlebot3_manipulation_system.cpp
turtlebot3_manipulation_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_manipulation_moveit_config/config/: fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_servo.yaml  moveit_teleop.rviz  ompl_planning.yaml  panda_simulated_config.yaml  ros2_controllers.yaml  ros_controllers.yaml  tb3_manipulation.srdf  tb3_omx.srdf  turtlebot3_manipulation.ros2_control.xacro  turtlebot3_manipulation.srdf  turtlebot3_manipulation.urdf.xacro
turtlebot3_manipulation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  (+31 more)
turtlebot3_manipulation_navigation/: CMakeLists.txt  package.xml
turtlebot3_manipulation_slam/: CMakeLists.txt  package.xml
turtlebot3_manipulation_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+165 files in other folders)
