<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_lime_teleop</name>
  <version>2.1.1</version>
  <description>Ros2 Package of the turtlebot3_lime_teleop</description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://emanual.robotis.com/docs/en/platform/turtlebot3/lime/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_lime</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_lime/issues</url>
  <author email="hjkim@robotis.com">Hye-jong KIM</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>turtlebot3_lime_bringup</depend>
  <depend>turtlebot3_lime_moveit_config</depend>
  <depend>turtlebot3_lime_description</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
