<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_manipulation</name>
  <version>2.0.1</version>
  <description>
    ROS2 package for turtlebot3_manipulation
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Ryan Shim</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_with_tb3</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>turtlebot3_manipulation_controller</exec_depend>
  <exec_depend>turtlebot3_manipulation_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
