<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_manipulation</name>
  <version>2.0.2</version>
  <description>ROS packages for turtlebot3_manipulation</description>

  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3_manipulation</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_manipulation_bringup</exec_depend>
  <exec_depend>turtlebot3_manipulation_description</exec_depend>
  <exec_depend>turtlebot3_manipulation_gui</exec_depend>
  <exec_depend>turtlebot3_manipulation_moveit_config</exec_depend>
  <exec_depend>turtlebot3_manipulation_navigation</exec_depend>
  <exec_depend>turtlebot3_manipulation_slam</exec_depend>

  <export><metapackage/></export>
</package>
