<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_manipulation_bringup</name>
  <version>2.1.0</version>
  <description>
    ROS 2 package for turtlebot3_manipulation
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-jong KIM</author>
  <author email="yyk@robotis.com">YeongKyu Yoon</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>imu_sensor_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>controller_manager</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>turtlebot3_manipulation_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
