<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_manipulation_description</name>
  <version>2.0.2</version>
  <description>ROS package for turtlebot3_manipulation_description</description>

  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3_manipulation</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
</package>
