<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_manipulation_description</name>
  <version>2.2.0</version>
  <description>
    ROS 2 package for turtlebot3_manipulation_description
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-jong KIM</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
