<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_manipulation_gui</name>
  <version>1.0.1</version>
  <description>ROS package for turtlebot3_manipulation_gui</description>

  <author email="jhshim@robotis.com">Ryan Shim</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot3_manipulation</url>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>

  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>

</package>
