<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_manipulation_gui</name>
  <version>2.0.3</version>
  <description>ROS package for turtlebot3_manipulation_gui</description>

  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3_manipulation</url> -->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
</package>
